# harvestwind-backup

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
config/: client.example.yml  server.example.yml
src/harvestwind_backup/: __init__.py  borg.py  cloud.py  config.py  discovery.py  logging_setup.py  metrics.py  rsync.py  staging_lock.py  verify.py  volumes.py
src/harvestwind_backup/client/: __init__.py  cli.py  runner.py
src/harvestwind_backup/notify/: __init__.py  ntfy.py
src/harvestwind_backup/server/: __init__.py  cli.py  runner.py
tests/: test_borg_prune.py  test_borg_stats.py  test_borg_verify.py  test_cloud_sync.py  test_discovery.py  test_metrics.py  test_rsync_verify.py  test_server_notify_profile.py  test_server_runner.py  test_staging_lock.py  test_verify_tar.py
