[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harvestwind-backup"
version = "0.1.3"
description = "Docker volume and rsync backup client; Borg and cloud sync server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
harvestwind-backup-client = "harvestwind_backup.client.cli:main"
harvestwind-backup-server = "harvestwind_backup.server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
